welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:29: error: not enough arguments for method motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	motif()
             ^